[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/view/CardViewItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/deck_list/DeckItem.gd" type="Script" id=2]
[ext_resource path="res://thridparty/medium_front.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/deck_list/deck_styleboxflat.tres" type="StyleBox" id=4]
[ext_resource path="res://thridparty/big_font.tres" type="DynamicFont" id=5]

[node name="DeckItem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -814.0
margin_bottom = -360.0
rect_min_size = Vector2( 212, 250 )
focus_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 15.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 212.0
margin_bottom = 235.0
mouse_filter = 1
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
margin_right = 212.0
margin_bottom = 235.0
mouse_filter = 1
color = Color( 0, 0.501961, 1, 0.588235 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_bottom = -10.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardViewItem" parent="CenterContainer" instance=ExtResource( 1 )]
margin_left = 84.0
margin_top = 105.0
margin_right = 128.0
margin_bottom = 145.0

[node name="DeckName" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -106.0
margin_top = -40.0
margin_right = 106.0
mouse_filter = 2
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "New Deck"
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CountLineEdit" type="LineEdit" parent="."]
visible = false
margin_top = 182.756
margin_right = 60.0
margin_bottom = 209.756
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_uneditable = Color( 0.792157, 0.784314, 0.784314, 1 )
text = "4"
align = 1
editable = false
expand_to_text_length = true
__meta__ = {
"_edit_use_anchors_": false
}
